Add some random text

--- a/opentreemap/example/static/index.html
+++ b/opentreemap/example/static/index.html
@@ -63,6 +63,7 @@
     <!--[if lte IE 8]><link rel="stylesheet" href="../dist/leaflet.ie.css" /><![endif]-->
 </head>
 <body>
+<span>OTM Test (PTM Data)</span>
 <div id="map" style="width: 1500px; height: 900px"></div>
 </body>
 </html>
