--- a/opentreemap/example/static/index.html
+++ b/opentreemap/example/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Windshaft test</title>
+    <title>Windshaft test (On a Branch)</title>
     <meta charset="utf-8" />
     <script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
