--- a/prototype/base.html
+++ b/prototype/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>OpenTreeMap</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/application.css" rel="stylesheet">
@@ -21,13 +21,12 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="#" data-r767="OpenTreeMap"><img src="img/logo-white.svg" alt="OpenTreeMap"></a>
-          <ul class="nav pull-right">
-            <li><a href="#" data-r767="Explore Trees"><i class="icon-search icon-white"></i></a></li>
-            <li><a href="#" data-r767="Add a Tree"><i class="icon-plus icon-white"></i></a></li>
+          <ul class="nav pull-left">
+            <li><a href="#">Explore Trees</a></li>
+            <li><a href="#">Add a Tree</a></li>
             <li class="divider-vertical"></li>
-            <li><a href="#" data-r767="Log In"><i class="icon-user icon-white"></i></a></li>
-            <li><a href="#" data-r767="Sign Up"><i class="icon-edit icon-white"></i></a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Sign Up</a></li>
           </ul>
         </div>
       </div>
@@ -106,16 +105,7 @@
       <a href="#" class="btn addBtn">Add a Tree</a>
     </div>
 
-    <!--
-    <div class="additional-searches">
-      <div class="stewardship">
-        I am looking for trees that have been ... between then and now.
-      </div>
-    </div>
-    -->
-
     <div class="content">
-      test
     </div>
 
     <footer>
