Created FAQ template

--- a/prototype/static.html
+++ b/prototype/static.html
@@ -44,9 +44,6 @@
 
         <!--Species Search-->
         <div class="search-block">
-          <span class="mobile-only">
-            <p class="pull-left">Search by Species</p><a class="pull-right btn"><i class="icon-th-list"></i></a>
-          </span>
           <p class="desktop-only">Search by Species</p></a>
           <div class="input-prepend">
             <div class="btn-group">
@@ -59,16 +56,10 @@
             </div>
             <input type="text" placeholder="American basswood">
           </div>
-          <div class="mobile-only">
-            <input type="text" class="input-block-level" placeholder="340 N 12th St, Philadelphia">
-          </div>
         </div>
 
         <!-- Location Search -->
         <div class="search-block">
-          <span class="mobile-only">
-            <p class="pull-left">Search by Location</p><a class="pull-right btn"><i class="icon-th-list"></i></a>
-          </span>
           <p class="desktop-only">Search by Location</p>
           <div class="input-prepend">
             <div class="btn-group">
@@ -80,9 +71,6 @@
               </ul>
             </div>
             <input type="text" placeholder="340 N 12th St, Philadelphia">
-          </div>
-          <div class="mobile-only">
-            <input type="text" class="input-block-level" placeholder="340 N 12th St, Philadelphia">
           </div>
         </div>
 
@@ -106,6 +94,30 @@
     </div>
 
     <div class="content">
+      <div class="faq-content">
+        <h1>Static Page Template</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget ultrices augue. Ut euismod sem vel dolor elementum molestie. Nullam sodales viverra quam, quis sagittis felis dignissim sed. Nunc ac tincidunt enim. Nunc quam tellus, fringilla nec elit id, molestie ultricies lectus. Morbi nec lacus et risus fringilla dignissim. Aenean ut ultricies ipsum, vitae lacinia metus. Cras risus magna, lobortis sit amet tortor non, convallis dictum augue. Phasellus viverra vehicula elementum. Donec nisl tellus, consectetur in hendrerit non, accumsan a dui.</p>
+        <h2>Subheading</h2>
+        <p>Suspendisse tempus nisl nisl, vel commodo augue consequat at. Etiam laoreet at lacus sit amet blandit. Maecenas interdum eros vitae mi congue, ut pulvinar augue eleifend. Cras sed velit vitae nulla hendrerit dictum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+        <h2>Subheading</h2>
+        <p>Suspendisse tempus nisl nisl, vel commodo augue consequat at. Etiam laoreet at lacus sit amet blandit. Maecenas interdum eros vitae mi congue, ut pulvinar augue eleifend. Cras sed velit vitae nulla hendrerit dictum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+      </div>
+      <div class="faq-nav">
+        <h5>Section Heading</h5>
+        <ul>
+          <a href="#"><li>Section</li></a>
+          <a href="#"><li>Section</li></a>
+          <a href="#"><li>Section</li></a>
+          <a href="#"><li>Section</li></a>
+        </ul>
+        <h5>Section Heading</h5>
+        <ul>
+          <a href="#"><li>Section</li></a>
+          <a href="#"><li>Section</li></a>
+          <a href="#"><li>Section</li></a>
+          <a href="#"><li>Section</li></a>
+        </ul>
+      </div>
     </div>
 
     <footer>
@@ -122,7 +134,6 @@
     <!-- Javascript -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/response.js"></script>
     <script src="js/application.js"></script>
 
   </body>
