Started on a new-and-improved tree detail template

--- a/prototype/tree_detail.html
+++ b/prototype/tree_detail.html
@@ -101,16 +101,108 @@
         <a class="btn btn-mini add-photos" href="#">Add Photos</a>
         <hr>
         <a class="btn add-favorite" href="#">Add to Favorites</a>
-
+        <hr>
         <h3>Latest Update</h3>
-        <h4><a href="#">administrator</a> - July 18, 2013</h4>
-
+        <p><a href="#">administrator</a> - July 18, 2013</p>
+        <h5>20% Complete</h5>
+        <div class="progress">
+          <div class="bar" style="width: 20%;"></div>
+        </div>
+        <hr>
+        <h3>Your Turn</h3>
+        <p>Our database of trees comes from public records and citizen foresters like you. Update the information for this tree and help us grow!</p>
+        <hr>
+        <h3>Recent Edits</h3>
+        <ul>
+          <li>Today - <a href="#">administrator</a></li>
+          <li>7/31/13 - <a href="#">administrator</a></li>
+          <li>7/31/13 - <a href="#">administrator</a></li>
+          <li>7/31/13 - <a href="#">administrator</a></li>
+          <li>7/31/13 - <a href="#">administrator</a></li>
+        </ul>
       </div>
 
       <!-- Center Column -->
       <div class="center">
         <h1>American basswood</h1>
         <h2>Tilia americana</h2>
+        <h3>454 Levering Mill Rd, Merion Station, PA 19066</h3>
+
+        <!-- General Tree Information -->
+        <table class="table table-striped">
+          <h5>General Tree Information</h5>
+          <tbody>
+            <tr>
+              <td>Tree Number</td>
+              <td>438445</td>
+            </tr>
+            <tr>
+              <td>Scientific Name</td>
+              <td><em>Tilia americana</em></td>
+            </tr>
+            <tr>
+              <td>Common Name</td>
+              <td>American basswood</td>
+            </tr>
+            <tr>
+              <td>Trunk Diameter</td>
+              <td>17.00 in</td>
+            </tr>
+            <tr>
+              <td>Tree Height</td>
+              <td>Missing</td>
+            </tr>
+            <tr>
+              <td>Canopy Height</td>
+              <td>Missing</td>
+            </tr>
+          </tbody>
+        </table>
+        <hr>
+        
+        <!-- Yearly Ecosystem Services --> 
+        <table class="table table-striped">
+          <h5>Yearly Ecosystem Services</h5>
+          <tbody>
+            <tr>
+              <td>Stormwater Intercepted</td>
+              <td>2417 gal</td>
+              <td>$23.92</td>
+            </tr>
+            <tr>
+              <td>Energy Conserved</td>
+              <td>1543 kWh</td>
+              <td>$23.92</td>
+            </tr>
+            <tr>
+              <td>Air pollutants removed</td>
+              <td>3.298 lbs</td>
+              <td>$7.81</td>
+            </tr>
+            <tr>
+              <td>Carbon dioxide reduced</td>
+              <td>647 lbs</td>
+              <td>$2.16</td>
+            </tr>
+            <tr>
+              <td>Total Co2 stored to date</td>
+              <td>3157 lbs</td>
+              <td>$10.55</td>
+            </tr>
+          </tbody>
+        </table>
+        <hr>
+
+      </div>
+
+      <div class="right">
+        <h3>Commments</h3>
+        <p>Sign up or log in to add comments</p>
+        <br>
+        <form>
+          <textarea rows=8></textarea><br>
+          <button type="submit" class="btn">Submit</button>
+        </form>
       </div>
 
     </div>
