--- a/prototype/map.html
+++ b/prototype/map.html
@@ -100,9 +100,9 @@
       <div class="accordion" id="map-info">
         <div class="accordion-group">
           <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#map-info" href="#treeDetails">Tree Details</a>
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#map-info" href="#tree-details">Tree Details</a>
           </div>
-          <div id="treeDetails" class="accordion-body collapse">
+          <div id="tree-detail" class="accordion-body collapse">
             <div class="accordion-inner">
               Anim pariatur cliche...
             </div>
