--- a/prototypes/user.html
+++ b/prototypes/user.html
@@ -16,19 +16,59 @@
       <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
           <ul class="nav pull-left">
+              <li class="add-menu dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown"><i class="icon-plus-circled"></i></a>
+                  <ul class="dropdown-menu">
+                      <li><a>Add a Tree</a></li>
+                      <li><a>Add a Resource</a></li>
+                  </ul>
+              </li>
               <li><a>Explore Trees</a></li>
-              <li><a>Add a Tree</a></li>
-              <li><a>Manage Tree Map</a></li>
-              <li><a>Edits</a></li>
+              <li><a>View Edits</a></li>
           </ul>
           <ul class="nav pull-right">
+              <li class="dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown">My Tree Map</a>
+                  <ul class="dropdown-menu">
+                      <li><a><i class="icon-cog"></i> Customize Tree Map</a></li>
+                      <li><a><i class="icon-thumbs-up"></i> Moderate</a></li>
+                  </ul>
+              </li>
               <li><a>My Account</a></li>
-              <li><a>Logout</a></li>
               <li class="user-img">
                 <a><img src="static/img/profile.png"></a>
               </li>
           </ul>
         </div>
+      </div>
+      <div class="user-dock">
+          <div class="row-fluid">
+              <div class="span1">
+                  <a><img src="static/img/profile.png" class="user-img"></a>
+              </div>
+              <div class="span3">
+                  <h2>administrator</h2>
+                  <h4>Administrative User</h4>
+                  <a class="btn btn-primary">Edit Profile</a>
+                  <a class="btn">Logout</a>
+              </div>
+              <div class="span4">
+                  <label>My Tree Maps <a class="pull-right">View All Maps</a></label>
+                  <ul>
+                      <li><a>testmap</a> <span>Owner</span></li>
+                      <li><a>testmap</a> <span>User</span></li>
+                      <li><a>testmap</a> <span>User</span></li>
+                  </ul>
+              </div>
+              <div class="span4">
+                  <label>My Recent Contributions <a class="pull-right">View All Edits</a></label>
+                  <ul>
+                      <li>Updated <a>species</a> on <a>plot 226234</a></li>
+                      <li>Updated <a>species</a> on <a>plot 226234</a></li>
+                      <li>Updated <a>species</a> on <a>plot 226234</a></li>
+                  </ul>
+              </div>
+          </div>
       </div>
       <!-- Logo and Search -->
       <div class="header">
@@ -114,5 +154,22 @@
             <a href="javascript:;" class="pull-right partners">Partners</a>
         </div>
     </footer>
+    
+    <!-- 
+        ***
+
+        This is just placeholder to show interactivity.
+        Hopefully it just helps give a sense of how things should work.
+
+        ***
+    -->
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script>
+        $('.dropdown-toggle').dropdown();
+        $('.user-img').on('click', function() {
+            $('.user-dock').toggleClass('active');
+        });
+    </script>
   </body>
 </html>
