Add plot_detail.html prototype, minor styling changes for consistency

--- a/prototypes/user.html
+++ b/prototypes/user.html
@@ -146,7 +146,7 @@
                         <img class="user-photo" id="user-photo" src="static/img/profile.png">
                         <button id="toggle-set-photo-modal" class="btn btn-mini add-photos">Add Photo</button>
                     </div>
-                    <h1>Username <small>User Profile</small></h1>
+                    <h1>Administrator <small>User Profile</small></h1>
                 </div>
                 <button id="edit-user" data-class="display" class="btn btn-small btn-info">Edit Profile</button>
                 <button id="save-edit" data-class="edit" class="btn btn-small btn-primary hidden">Save</button>
