Style tables, small tweaks to resource detail page

--- a/prototypes/resource_detail.html
+++ b/prototypes/resource_detail.html
@@ -175,7 +175,7 @@
                         <h4>Latest Update</h4>
                         <p>CityofEdmonton created this resource on Dec. 20, 2013</p>
                         <div class="progress">
-                            <div class="bar" style="width: 75%;"></div>
+                            <div class="bar" style="width: 50%;"></div>
                         </div>
                         <h5>50% Complete</h5>
                     </div>
@@ -210,7 +210,7 @@
 
                             <!-- Tree Information -->
                             <h3>Resource Information</h3>
-                            <div id="tree-details">
+                            <div id="resource-info">
                                 <table class="table table-hover">
                                     <tbody>
                                         <tr>
@@ -230,7 +230,7 @@
                             </div>
 
                             <h3>Resource Details</h3>
-                            <div id="tree-details">
+                            <div id="resource-details">
                                 <table class="table table-hover">
                                     <tbody>
                                         <tr>
@@ -254,9 +254,9 @@
                             </div>
                         </form>
 
-                        <!-- Ecosystem Benefits -->
+                        <!-- Resource Ecosystem Benefits -->
                         <div id="ecobenefits">
-                            <h3>Yearly Ecosystem Services</h3>
+                            <h3>Resource Ecosystem Benefits</h3>
                             <div class="alert alert-info">
                                 <p>Ecosystem benefits are not available for tree maps in locations outside the United States. More info is available in the <a href="https://opentreemap.org/faq/#03">OpenTreeMap FAQ</a>.</p>
                             </div>
